--- a/Where am I/Info.plist
+++ b/Where am I/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>I need to use your device&apos;s location services to determine where you are.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>I need to use your device&apos;s location services to determine where you are.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
