--- a/Where am I/Info.plist
+++ b/Where am I/Info.plist
@@ -22,14 +22,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>I need to use your device's location services to determine where you are.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>I need to use your device's location services to determine where you are.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>I need to use your device&apos;s location services to determine where you are.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>I need to use your device&apos;s location services to determine where you are.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -37,8 +37,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
